# sva_toolkit

./: .gitignore  .gitmodules  FINAL_VERIFICATION.md  Makefile  READABILITY_IMPROVEMENTS.md  README.md  REFACTORING_SUMMARY.md  SAMPLING_STRATEGY.md  STRATIFIED_SAMPLING.md  SVATRANS_IMPLEMENTATION_SUMMARY.md  output.json  output1.json  pyproject.toml  test_results.txt  test_sva_trans.py
data/: output2.json  output3.json
docs/: README.md  annotated_data.json  demo.tape  demo.tape.bak  raw_data.json  sva-ast.md  sva-benchmark.md  sva-cot.md  sva-dataset.md  sva-gen.md  sva-implication.md  sva-vcformal-implication.md  toolkit_introduction.md
docs/docs/: sva_toolkit.pptx
examples/: aug_svas_predict_0730.jsonl  benchmark_dataset.json  coverage_analysis.py  debug_modules.py  equivalence_results.json  implication_check_test.py  llm_configs.json  llm_configs_sillicon.json  preprocess_data.py  readability_comparison.py  run_multi_bench_results.json  sample_dataset.json  stratified_demo.py  svad_demo.py  syntax_check.json  syntax_check_2.json  usage_example.py  xepic_dataset_results.json
examples/eda/: aug_svas_predict_1204.jsonl  implication_check_aug_svas_predict_1204.json  result.json
experiments/benchmark_models/: claude_llm_verification_results.json  deepseek_llm_verification_results.json  exp.ipynb  exp_iterative_candidate_runner.py  exp_runner.py  (+10 more)
templates/: dummy_module.sv.j2
tests/: __init__.py  conftest.py  test_ast_parser.py  test_benchmark.py  test_cot_builder.py  test_dataset_builder.py  test_full_properties.py  test_implication_checker.py  test_utils.py
(+45 files in other folders)
